objects/Street__c.object
<CustomObject>
    <description>Streets of Callejero Service</description>
    <fields>
        <fullName>CALLEMU__c</fullName>
        <description>CALLE ID from CV Callejero</description>
        <label>CALLEMU</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag if a Street Record is Active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location</description>
        <inlineHelpText>Localidad</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Streets</relationshipLabel>
        <relationshipName>Streets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Street__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Street for Range record types</description>
        <label>Parent Street</label>
        <referenceTo>Street__c</referenceTo>
        <relationshipLabel>Streets</relationshipLabel>
        <relationshipName>Streets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Argentina CPA Postal Code</description>
        <label>Postal Code</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_From__c</fullName>
        <description>Starting Address Number for the Range</description>
        <label>Range From</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Range_To__c</fullName>
        <description>Address Number Range End</description>
        <label>Range To</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StreetCode__c</fullName>
        <description>Callejero Street Reference / External ID / Código de Refencia de la Calle en Callejero</description>
        <externalId>true</externalId>
        <label>StreetCode</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZONAID__c</fullName>
        <description>Zone ID from CV Callejero where the Street or Range is located</description>
        <label>ZONAID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Street</label>
    <nameField>
        <label>Street Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Streets</pluralLabel>
    <recordTypes>
        <fullName>Range</fullName>
        <active>true</active>
        <description>Range Record sub-type</description>
        <label>Range</label>
    </recordTypes>
    <recordTypes>
        <fullName>Street</fullName>
        <active>true</active>
        <description>Street Record Type</description>
        <label>Street</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>